css cleanup + fix image alignment #3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -567,13 +567,16 @@ POST/ARTICLE HEADERS
 
 .kg-image-card.kg-width-wide {
     position: relative;
-    left: -5vw;
-    width: 70vw;
+	left: -10%;
+	width: 120%;
 }
 
- .post-full-content .kg-image-full {
-    max-width: 100vw;
+.kg-image-card.kg-width-full {
+	width: 150%;
+	left: -25%;
+    position: relative;
 }
+
 .kg-image {
     max-width: 100%;
 }
@@ -586,31 +589,12 @@ POST/ARTICLE HEADERS
     text-align: center;
 }
 
-.kg-image-card.kg-width-full {
-    width: 94vw;
-    left: -16vw;
-    position: relative;
-}
-
  .post-full-content .kg-image-full + figcaption {
     max-width: 840px;
 }
- @media (max-width: 1040px) {
-    .post-full-content .kg-image-full {
-        width: 100vw;
-    }
-}
- @media (max-width: 1170px) {
-    .post-full-content .kg-image-full + figcaption {
-        padding: 0 11vw;
-        max-width: 100vw;
-    }
-}
- @media (max-width: 500px) {
-    .post-full-content .kg-image-full + figcaption {
-        padding: 0 4vw;
-    }
-}
+
+
+
 
 .post-template {
 	background: white;
